tränat div box model

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     color:blue;
 }
 body{
-    background-image: url("https://lh3.googleusercontent.com/drive-storage/APZSt_diIlRVLQc1ApIHFeqz0Fhyg1SCTECwtDMLo_cbRl2zGydj45Pqb3Kw08Xt6ZveSRzLbY8xrosPhc4Bx79hT3ALJW8HFSMFhHR_cFEZ=w1903-h963");
+    background-image: url("img/showcase.jpg");
 }
 
 .gray-box{
